# pocket-claude

./: .env.example  .gitignore  LICENSE  README.md  TESTING.md  app.py  backends.py  bridge.py  cli.py  commands.py  feishu_adapter.py  formatting.py  history.py  im_adapter.py  monitor.py  parsers.py  pyproject.toml  remote_mode.py  requirements.txt  screen_classifier.py  security.py  session_runtime.py  state.py  tmux.py
tests/: test_app.py  test_backends.py  test_cli.py  test_commands.py  test_feishu_adapter.py  test_formatting.py  test_history.py  test_monitor.py  test_parser_fixtures.py  test_parsers.py  test_remote_mode.py  test_screen_classifier.py  test_security.py  test_session_runtime.py  test_state.py  test_tmux.py
tests/fixtures/: claude_sample.jsonl  codex_sample.jsonl
