[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-agent-remote"
version = "0.2.0"
description = "Use your phone as a remote controller for desktop CLI agents like Codex and Claude Code."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Phone Agent Remote contributors"}]
dependencies = [
    "lark-oapi",
    "python-dotenv",
    "requests",
    "websockets",
]

[project.scripts]
phone-agent = "cli:main"

[tool.setuptools]
py-modules = [
    "app",
    "backends",
    "bridge",
    "cli",
    "commands",
    "feishu_adapter",
    "formatting",
    "history",
    "im_adapter",
    "monitor",
    "parsers",
    "remote_mode",
    "screen_classifier",
    "security",
    "session_runtime",
    "state",
    "tmux",
]
